{
    "version": 1,
    "name": "P_InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "88042732-3954-446c-9579-f9c44af6802b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "89c81cb6-669b-42db-852c-c2f0213eaf0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "3ec12095-1c40-4374-8082-9a2b5c076441",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RangedAttack",
                    "type": "Button",
                    "id": "8bf90732-368f-4d8e-88e0-90e7252789fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "79e27c44-7e73-4d7f-a00b-241a66d7438d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c5848249-623e-4827-9a73-cc97c7ff57d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5722f33d-090d-40f2-b4e7-fb86140f3128",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f20a5c17-22f4-4c70-a2df-8fa8802180db",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "818820cc-1231-4e52-894f-f9306a651d6d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85e9b87b-75ff-4baf-8bf9-2f566516c097",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ca9c59dd-644f-40f4-a13c-ed177bdbfac8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d52488fb-3952-40ec-8847-57d64be1fb32",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc02d794-dcfe-46e7-8d1a-b186bea67744",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21a25a67-8d84-4aa5-bba3-f9384cd0d9a7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RangedAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2754cc19-3a21-4379-af93-f15e3c694687",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "3880069f-ae40-4215-b7f5-00748027e168",
            "actions": [
                {
                    "name": "ToggleStats",
                    "type": "Button",
                    "id": "b26e1a91-c41c-4d3c-8481-7b6662c14015",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSkillTree",
                    "type": "Button",
                    "id": "275f2912-559d-4d63-9ce3-6cfbf54fb296",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleShop",
                    "type": "Button",
                    "id": "0d614b4b-952b-46a1-abda-e10e3b7426f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EndConvo",
                    "type": "Button",
                    "id": "2d5d9b74-b60a-48d5-86cc-02bbe3d181a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSetting",
                    "type": "Button",
                    "id": "d7d38e11-db8a-4657-9093-ad4d3649d500",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Value",
                    "id": "24c2f603-f2f7-4bb7-84f6-55c23cdbe1ce",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "297a4245-1580-4839-a3ad-75057190f2d3",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleStats",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bb989cc-7c06-4235-abb6-90655409b0d8",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSkillTree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9193b7cf-31dc-4277-961f-a9585a6515e7",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dec4586-a095-4c87-9d61-ef4d8dae40eb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndConvo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e6c5672-c196-4152-ab6d-31dec1c60c73",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSetting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "707d00c0-58f1-4bf0-8e12-8d5397859a13",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7c26e77-3e2c-4485-8b0a-43d72f0e8422",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f2be5e3-a16b-4601-91f7-9ea485963d76",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50b30252-29c3-40b8-acfd-952fe40be6ce",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02e34ccc-fdbd-46ea-a0fa-f4ac1ad40877",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d41969d9-3ba8-45e7-98e8-5798f572058d",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92a7c81c-de70-49e0-bc78-af09d78a5754",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "Scale(factor=7)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3584df4-13bf-4816-951e-5e51aeeaf055",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "Scale(factor=8)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35431e02-2a18-4cc7-9f79-8130660585b3",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "Scale(factor=9)",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "821d0caf-ce2c-4f03-afb9-07800f070915",
            "actions": [
                {
                    "name": "GainExp",
                    "type": "Button",
                    "id": "ff784e66-f00c-4641-a396-797ded21e916",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDamaged",
                    "type": "Button",
                    "id": "ab623e52-d722-494d-94b1-4aafcd6d7e5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnHealed",
                    "type": "Button",
                    "id": "ec6d2d3d-b758-4006-af0b-1feb7e3770f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3aee1719-2867-46de-a2f6-41cebb460c60",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GainExp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d20d81f6-6914-4ba5-99d4-fccd1d45bea3",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDamaged",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ce79e09-ea96-4e21-93af-bd64734a5af9",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnHealed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}